cambios en HTML

--- a/yeremmi.html
+++ b/yeremmi.html
@@ -10,12 +10,9 @@
 	<h1>Yereemmi Sarmiento Alonzo</h1>
 	<h1>Yereemmi Sarmiento Alonzo</h1>
 	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	
 
+	<h1>HOLA MUNDOOOOOOOOOOOOOOOOOOOOO</h1>
+	<h1>HOLA MUNDOOOOOOOOOOOOOOOOOOOOO</h1>
+	<h1>HOLA MUNDOOOOOOOOOOOOOOOOOOOOO</h1>
 </body>
 </html>
