--- a/yeremmi.html
+++ b/yeremmi.html
@@ -6,9 +6,7 @@
 	<title>YEremmi Sarmiento</title>
 </head>
 <body>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
-	<h1>Yereemmi Sarmiento Alonzo</h1>
+	<h2>TAreaaaaaaaaaaaaaa</h2>
 	<h1>Yereemmi Sarmiento Alonzo</h1>
 
 	<h1>HOLA MUNDOOOOOOOOOOOOOOOOOOOOO</h1>
